--- a/package.json
+++ b/package.json
@@ -44,14 +44,17 @@
     "@types/eslint": "^8.4.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.7",
+    "concurrently": "^7.2.1",
     "cross-env": "^7.0.3",
     "cypress": "^9.5.3",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.5.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.14",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.10",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   },
   "engines": {
